--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -1,1 +1,15 @@
-<h1>Hello World!</h1>
+<h1>WELCOME!</h1>
+<h3>What's your User Name?</h3>
+<!--need input field that is scoped to username-->
+<!--ng-click="goToTweets()" is basically an onclick function. -->
+
+<div>
+    <!--you are putting the things in ng-model on scope.-->
+    <input type="text" ng-model="username" placeholder="username">
+
+ </div>
+
+ <!--<input type="text" ng-model="contactName">-->
+ <!--ng-click binds to function -->
+<button ng-click="setUser()">SUBMIT</button>
+
